# MyEventMemory

./: CMakeLists.txt  main.cpp  server.cpp  server.h  test_dlib.cpp
server/: server.sln
server/BL/: BL.vcxproj
server/DAL/: DAL.vcxproj
server/server/: Server.cpp  http_tcpServer.cpp  http_tcpServer.h  packages.config  server.vcxproj  server.vcxproj.filters
